[tool.poetry]
name = "web-only-python"
version = "1.0.0"
description = "Pythonだけで作るウェブアプリケーション"
authors = ["alivelimb <krkettle57@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mimesis = "^5.3.0"
streamlit = "^1.8.1"
dataset = "^1.5.2"
tinydb = "^4.7.0"
importlib-resources = "^5.7.1"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
